committing code to pick values ffrom  different profiles for different environment like qa ,dev ,prod

--- a/limits-service/limits-service/src/main/resources/application.properties
+++ b/limits-service/limits-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=limits-service
 server.port=8080
 spring.config.import=optional:configserver:http://localhost:8888
+
+#spring.profiles.active=prod
+spring.cloud.config.profile=qa
 limits-service.minimum=2
 limits-service.maximum=998
