--- a/currrency-exchange-service/src/main/resources/application.properties
+++ b/currrency-exchange-service/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 
-spring.jpa.defer-datasource-initialization=true \
+spring.jpa.defer-datasource-initialization=true
  # For >2.5.0
