--- a/currrency-exchange-service/src/main/resources/application.properties
+++ b/currrency-exchange-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.h2.console.enabled=true
 
 spring.jpa.defer-datasource-initialization=true
  # For >2.5.0
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
