--- a/limits-service/limits-service/src/main/resources/application.properties
+++ b/limits-service/limits-service/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.config.import=optional:configserver:http://localhost:8888
 spring.cloud.config.profile=qa
 limits-service.minimum=2
 limits-service.maximum=998
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
