--- a/spring-cloud-config-server/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 spring.cloud.config.server.git.uri=file:///D:/2023/udemy/spring-boot-microservices/git-localconfig-repo
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
